...
import se.kjellstrand.fieldshootingtimer.resources.stop
import se.kjellstrand.fieldshootingtimer.resources.stop_action
import se.kjellstrand.fieldshootingtimer.ui.theme.BlackColor
import se.kjellstrand.fieldshootingtimer.ui.theme.Paddings
import se.kjellstrand.fieldshootingtimer.ui.theme.WhiteColor

internal const val PLAY_BUTTON_TAG = "PlayButton"
internal const val PLAY_ICON_TAG = "PlayButtonIconPlay"
internal const val STOP_ICON_TAG = "PlayButtonIconStop"
internal const val RESET_ICON_TAG = "PlayButtonIconReset"
internal const val COUNTDOWN_TEXT_TAG = "CountdownText"

/**
...
